# sonotide

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: framework-ci.yml  release.yml
docs/: api.md  architecture.md  foundation.md  migration-plan.md  wasapi-mapping.md
docs/design-decisions/: 0001-name-and-boundaries.md  0002-threading-and-lifetime.md  0003-format-negotiation.md
examples/: CMakeLists.txt  README.md  playback_session.cpp
include/sonotide/: capture_stream.h  equalizer.h  loopback_capture_stream.h  playback_session.h  playback_state.h  render_stream.h  runtime.h
packaging/smoke-consumer/: CMakeLists.txt  main.cpp
src/: capture_stream.cpp  equalizer.cpp  loopback_capture_stream.cpp  playback_session.cpp  render_stream.cpp  runtime.cpp
src/internal/: equalizer_layout_utils.h  runtime_backend.h
src/internal/dsp/: biquad_filter.cpp  biquad_filter.h  equalizer_chain.cpp  equalizer_chain.h  equalizer_response_sampler.cpp  equalizer_response_sampler.h  output_headroom_controller.cpp  output_headroom_controller.h  parameter_smoother.cpp  parameter_smoother.h
src/internal/win/: media_foundation_decoder.cpp  media_foundation_decoder.h
tests/: CMakeLists.txt
tests/unit/: dsp_tests.cpp  equalizer_tests.cpp  playback_session_tests.cpp
